--- a/style.css
+++ b/style.css
@@ -52,5 +52,16 @@ html {
 .collections.active {
     display: flex;
     width: 100%; /* Show the active collection */
-    z-index: 50; /* Set a higher z-index for the active collection */
+    z-index: 10; /* Set a higher z-index for the active collection */
 }
+
+.w-zero {
+    width: 0rem;
+}
+
+.w-change {
+    width: 15rem;
+    background-color: rgb(0, 0, 0);
+}
+
+
