--- a/style.css
+++ b/style.css
@@ -66,4 +66,31 @@ html {
     background-color: rgb(0, 0, 0);
 }
 
+.waving {
+    animation: waves 5s infinite ;
+  }
+  
+  @keyframes waves {
+    0% {
+      transform: rotate(0deg);
+    }
+    5% {
+      transform: rotate(60deg);
+    }
+   
+    10% {
+      transform: rotate(-20deg);
+    }
+    15% {
+      transform: rotate(60deg);
+    }
+    20% {
+      transform: rotate(0deg);
+    }
+   
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+
 
